// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replay ADDED_TODO event can add todos as children of children 1`] = `
Array [
  Object {
    "id": "id-1",
    "title": "Create a parent todo",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "id": "id-5",
            "parentId": "id-3",
            "title": "Create a child todo of child of parent 2",
          },
          Object {
            "children": Array [
              Object {
                "id": "id-7",
                "parentId": "id-6",
                "title": "Create a child of 2nd child of child of parent 2",
              },
            ],
            "id": "id-6",
            "parentId": "id-3",
            "title": "Create a second child todo of child of parent 2",
          },
        ],
        "id": "id-3",
        "parentId": "id-2",
        "title": "Create a child in another parent todo",
      },
    ],
    "id": "id-2",
    "title": "Create another parent todo",
  },
  Object {
    "id": "id-4",
    "title": "Create a third parent todo",
  },
]
`;

exports[`replay ADDED_TODO event can add todos in a more complex example 1`] = `
Array [
  Object {
    "id": "id-1",
    "title": "Create a parent todo",
  },
  Object {
    "children": Array [
      Object {
        "id": "id-3",
        "parentId": "id-2",
        "title": "Create a child in another parent todo",
      },
      Object {
        "id": "id-5",
        "parentId": "id-2",
        "title": "Create another child todo in parent 2",
      },
    ],
    "id": "id-2",
    "title": "Create another parent todo",
  },
  Object {
    "id": "id-4",
    "title": "Create a third parent todo",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can edit child todos 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "id": "id-2",
        "parentId": "id-1",
        "title": "Changed title of child",
      },
    ],
    "id": "id-1",
    "title": "Create a todo",
  },
]
`;

exports[`replay editing todos CHANGED_TODO only edits the things provided in data and does not touch other fields 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "id": "id-2",
        "parentId": "id-1",
        "title": "Changed title of child but did not change parentId",
      },
    ],
    "id": "id-1",
    "title": "Create a todo",
  },
]
`;

exports[`replay editing todos CHANGED_TODO will change the todos when the edit is done 1`] = `
Object {
  "id": "id-1",
  "title": "Changed the todo",
}
`;

exports[`replay editing todos EDITING_TODO does not care in the store about intermediate edits 1`] = `
Object {
  "id": "id-1",
  "title": "Create a todo",
}
`;
